<resources>
    <string name="app_name">todoList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Active Tasks</string>
    <string name="menu_gallery">Completed Tasks</string>
    <string name="menu_slideshow">Deleted Tasks</string>

    <string name="home_second">Home Second</string>
    <string name="delete_task_text">Delete Task</string>
    <string name="task_type_label">Task type: </string>
    <string name="task_title_label">Task title: </string>
    <string name="task_description_label">Task description: </string>
    <string name="task_due_date_label">Due Date: </string>
    <string name="task_due_date_instructions">Add Date</string> <!-- Click button below to select date. -->
    <string name="select_due_date_text">Select Date</string>
    <string name="add_task_btn_text">Add Task</string>
    <string name="due_time_label">Due Time:</string>
    <string name="task_due_time_instructions">Add Time</string> <!-- Click the button below to select due time. -->
    <string name="select_due_time_btn_text">Select Time</string>
    <string name="update_task_button_text">Update Task</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="country_hint">Country</string>
    <string name="zip_code_hint">Zip Code</string>
    <string name="add_address_btn_text">Add an Address</string>
    <string name="hide_address_btn_text">Hide Address Fields</string>
    <string name="menu_tasks">All Tasks</string>
    <string name="checked_text">Checked</string>
    <string name="to_do_color_label">To-do Color: </string>

    <string-array name="task_color_array">
        <item>#FF0000</item>
        <item>#FFA500</item>
        <item>#FFB74D</item>
        <item>#FFF176</item>
        <item>#FFFF00</item>
        <item>#0000FF</item>
        <item>#64B5F6</item>
        <item>#81C784</item>
        <item>#E57373</item>
        <item>#BA68C8</item>
        <item>#90A4AE</item>
    </string-array>
</resources>
