<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_active_tasks"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_completed_tasks"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_deleted_tasks"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_all_tasks"
            android:title="@string/menu_tasks" />
    </group>
</menu>
